--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <h2>Fareeha</h2>
           </div>
           <div class="date">2020</div>
-          <p>the story of muskan and fareeha is the story of two girls growing up and coming of age together.
+          <p>the story of muskan and fareeha is the story of two girls growing up and coming of age together.<br><br>
 
-enemies to friends in kindergarten- rashi, you, and i had a 2 vs 1 rivalry going on. but you and i sealed the deal when you told me she had lice in her hair because she was hindu. from then on we stayed away from her. prejudice brought us together.
+enemies to friends in kindergarten- rashi, you, and i had a 2 vs 1 rivalry going on. but you and i sealed the deal when you told me she had lice in her hair because she was hindu. from then on we stayed away from her. prejudice brought us together.<br><br>
 
 we saw each other at weddings in the hand wash area and said hi. always said hi. <br><br>
 
@@ -206,7 +206,7 @@ Love you lotss❤️❤️</p>
             <h2>Kanhaya</h2>
           </div>
           <div class="date">2020</div>
-          <p>Heyy Muskann , done with your teenage already ?  Don't you this it went soo fast and soo many new people and new memories .It has beenn soo much fun with you. We'll make lot more memories together and I hope you have an amazing year ahead and get all the happiness that you deserve . And most importantly all the annoyance from meeee.Happy Birthdayy <3.</p>
+          <p>Heyy Muskann , done with your teenage already ?  Don't you think it went soo fast and soo many new people and new memories .It has beenn soo much fun with you. We'll make lot more memories together and I hope you have an amazing year ahead and get all the happiness that you deserve . And most importantly all the annoyance from meeee.Happy Birthdayy <3.</p>
           <a class="bnt-more" href="javascript:void(0)"></a>
         </div>
       </div>
